finished functionality for adding student added ability to add new student from registrar into current teachers class added style to turn any points_total red for visibility added error message if student_id is incorrect on add_student created add_student backend-point fixed 'find student name' endpoint to search registrar

--- a/client/src/assets/CSS/teacher_page.css
+++ b/client/src/assets/CSS/teacher_page.css
@@ -44,3 +44,7 @@
   display: flex;
   justify-content: center;
 }
+
+.red-zero {
+  background-color: red;
+}
